# devalerts

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-pypi.yml  test.yml
docs/superpowers/plans/: 2026-07-17-devalerts-throwaway-prototype.md
docs/superpowers/specs/: 2026-07-16-devalerts-mvp-design.md  2026-07-17-devalerts-dedup-ratelimit-dashboard-design.md  2026-07-19-devalerts-crash-streak-design.md
src/devalerts/: __init__.py  _alert.py  _badge.py  _blame.py  _celery.py  _slack.py  _store.py  _telegram.py  cli.py
tests/: test_alert.py  test_badge.py  test_blame.py  test_celery.py  test_cli.py  test_devalerts.py  test_init.py  test_logging.py  test_slack.py  test_store.py  test_telegram.py
