[project]
name = "devalerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sslinNn", email = "morison1991@mail.ru" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
