[project]
name = "devalerts"
version = "0.1.0"
description = "Send unhandled Python exceptions straight to a Telegram chat. No backend, no account, no database — just your own bot token."
readme = "README.md"
authors = [
    { name = "sslinNn", email = "morison1991@mail.ru" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
devalerts = "devalerts.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []
