[project]
name = "devalerts"
version = "0.3.0"
description = "Send unhandled Python exceptions straight to a Telegram chat (or Slack). No backend, no account, no database — just your own bot token or webhook URL."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "sslinNn", email = "morison1991@mail.ru" }
]
requires-python = ">=3.9"
dependencies = []
keywords = [
    "telegram",
    "error-tracking",
    "exception-monitoring",
    "alerts",
    "logging",
    "monitoring",
    "asgi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sslinNn/devalerts"
Repository = "https://github.com/sslinNn/devalerts"
"Bug Tracker" = "https://github.com/sslinNn/devalerts/issues"

[project.scripts]
devalerts = "devalerts.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "celery>=5.3.0",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["BLE"]
